--- a/apps/web/.eslintrc.json
+++ b/apps/web/.eslintrc.json
@@ -25,6 +25,8 @@
     "no-throw-literal": "error",
     "jsx-a11y/href-no-hash": "off",
     "jsx-a11y/anchor-is-valid": "off",
+    "jsx-a11y/click-events-have-key-events": "warn",
+    "jsx-a11y/no-noninteractive-element-to-interactive-role": "warn",
     "@typescript-eslint/no-use-before-define": "warn",
     "@typescript-eslint/interface-name-prefix": "warn",
     "@typescript-eslint/camelcase": ["error", { "properties": "never", "ignoreDestructuring": true }],
