--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -59,8 +59,8 @@
     "@types/react-router-dom": "^4.3.5",
     "@types/source-map-support": "^0.5.0",
     "@types/yup": "^0.26.23",
-    "@typescript-eslint/eslint-plugin": "^2.1.0",
-    "@typescript-eslint/parser": "2.1.0",
+    "@typescript-eslint/eslint-plugin": "^2.2.0",
+    "@typescript-eslint/parser": "2.2.0",
     "autoprefixer": "^9.6.1",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^24.9.0",
@@ -84,7 +84,7 @@
     "enzyme-adapter-react-16": "^1.14.0",
     "es-check": "^5.0.0",
     "eslint": "^6.3.0",
-    "eslint-config-prettier": "^6.2.0",
+    "eslint-config-prettier": "^6.3.0",
     "eslint-config-react-app": "^5.0.1",
     "eslint-loader": "3.0.0",
     "eslint-plugin-flowtype": "4.3.0",
@@ -114,6 +114,7 @@
     "postcss-loader": "^3.0.0",
     "prettier": "^1.18.2",
     "raw-loader": "^3.1.0",
+    "react-async-devtools": "^8.0.0",
     "react-hot-loader": "^4.12.12",
     "request": "^2.88.0",
     "rimraf": "^3.0.0",
@@ -121,7 +122,7 @@
     "source-map-explorer": "^2.0.1",
     "source-map-support": "^0.5.13",
     "style-loader": "^1.0.0",
-    "terser": "^4.2.1",
+    "terser": "^4.3.1",
     "terser-webpack-plugin": "^2.0.1",
     "ts-jest": "^24.0.2",
     "ts-loader": "^6.0.4",
@@ -147,8 +148,8 @@
     "@chakra-ui/core": "^0.2.6",
     "@emotion/core": "^10.0.17",
     "@emotion/styled": "^10.0.17",
-    "@material-ui/core": "^4.4.0",
-    "@material-ui/icons": "^4.2.1",
+    "@material-ui/core": "^4.4.1",
+    "@material-ui/icons": "^4.4.1",
     "@sindresorhus/is": "^1.0.0",
     "camelcase-keys": "^6.0.1",
     "core-js": "3",
@@ -158,9 +159,10 @@
     "history": "^4.9.0",
     "io-ts": "^2.0.1",
     "io-ts-promise": "^2.0.0",
-    "ky": "^0.13.0",
+    "ky": "^0.14.0",
     "loglevel": "^1.6.4",
     "react": "^16.9.0",
+    "react-async": "^8.0.0",
     "react-dom": "^16.9.0",
     "react-error-boundary": "^1.2.5",
     "react-final-form": "^6.3.0",
@@ -168,7 +170,7 @@
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
     "redux": "^4.0.4",
-    "redux-starter-kit": "^0.6.3",
+    "redux-starter-kit": "^0.7.0",
     "redux-thunk": "^2.3.0",
     "snakecase-keys": "^3.1.0",
     "tslib": "^1.10.0",
