--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -130,7 +130,7 @@
     "tslib": "^1.10.0",
     "typeface-muli": "0.0.71",
     "typesafe-actions": "^4.4.2",
-    "typescript": "^3.6.2",
+    "typescript": "^3.6.3",
     "url-loader": "^2.1.0",
     "utility-types": "^3.7.0",
     "webpack": "^4.39.3",
@@ -150,6 +150,7 @@
     "@emotion/styled": "^10.0.17",
     "@material-ui/core": "^4.4.1",
     "@material-ui/icons": "^4.4.1",
+    "@material-ui/lab": "^4.0.0-alpha.26",
     "@sindresorhus/is": "^1.0.0",
     "camelcase-keys": "^6.0.1",
     "core-js": "3",
