--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -16,7 +16,9 @@
         "lint": "tslint -p tsconfig.json -c tslint.json",
         "lint:fix": "tslint -p tsconfig.json -c tslint.json --fix",
         "fix": "npm run format && npm run lint",
-        "test": "jest",
+        "test": "jest -c jest.unit.config.js && jest -c jest.integration.config.js",
+        "test:unit": "jest -c jest.unit.config.js",
+        "test:integration": "jest -c jest.integration.config.js",
         "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js"
     },
     "dependencies": {
@@ -31,7 +33,7 @@
         "jsonwebtoken": "^8.5.1",
         "mysql2": "^1.7.0",
         "reflect-metadata": "^0.1.13",
-        "swagger-ui-express": "^4.1.0",
+        "swagger-ui-express": "^4.1.1",
         "ts-money": "^0.4.6",
         "typeorm": "^0.2.19",
         "winston": "^3.2.1"
@@ -42,12 +44,12 @@
         "@types/cors": "^2.8.6",
         "@types/express": "^4.17.1",
         "@types/jest": "^24.0.18",
-        "@types/jsonwebtoken": "^8.3.3",
+        "@types/jsonwebtoken": "^8.3.4",
         "@types/node": "^12.7.5",
         "@types/sqlite3": "^3.1.5",
         "@types/swagger-ui-express": "^3.0.1",
         "concurrently": "^4.1.2",
-        "cross-env": "^5.2.1",
+        "cross-env": "^6.0.0",
         "jest": "^24.9.0",
         "nodemon": "^1.19.2",
         "prettier": "^1.18.2",
@@ -60,26 +62,6 @@
         "typescript": "^3.6.3",
         "utility-types": "^3.7.0",
         "wait-on": "^3.3.0"
-    },
-    "jest": {
-        "moduleFileExtensions": [
-            "js",
-            "json",
-            "ts"
-        ],
-        "rootDir": ".",
-        "testRegex": ".spec.ts$",
-        "transform": {
-            "^.+\\.(ts|js|tsx)$": "ts-jest"
-        },
-        "coverageDirectory": "../coverage",
-        "setupFilesAfterEnv": ["./test/jest.setup.ts"],
-        "testEnvironment": "node",
-        "globals": {
-            "ts-jest": {
-                "tsConfig": "./tsconfig.jest.json"
-            }
-        }
     },
     "engines": {
         "node": ">=10.15.0"
