--- a/apps/api/tsconfig.jest.json
+++ b/apps/api/tsconfig.jest.json
@@ -1,6 +1,8 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
+    "allowJs": true,
+    "checkJs": false,
     "allowSyntheticDefaultImports": false
   }
 }
