--- a/.travis.yml
+++ b/.travis.yml
@@ -47,7 +47,7 @@ jobs:
     # Coverage
     - stage: Coverage
       script:
-          - yarn add codecov --ignore-workspace-root-check
+          - npm install -g codecov
           - cd packages/error-flow && codecov -F packagesErrorFlow && cd ../..
           - cd apps/web && codecov -F appsWeb && cd ../..
 
