--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -43,6 +43,7 @@
         "cors": "^2.8.5",
         "envalid": "^5.0.0",
         "express": "^4.17.1",
+        "faker": "^4.1.0",
         "jsonwebtoken": "^8.5.1",
         "mysql2": "^2.0.0",
         "reflect-metadata": "^0.1.13",
@@ -58,6 +59,7 @@
         "@types/cookie-parser": "^1.4.2",
         "@types/cors": "^2.8.6",
         "@types/express": "^4.17.2",
+        "@types/faker": "^4.1.7",
         "@types/jest": "^24.0.23",
         "@types/jsonwebtoken": "^8.3.5",
         "@types/node": "^12.12.7",
@@ -71,9 +73,9 @@
         "eslint-config-prettier": "^6.5.0",
         "eslint-loader": "3.0.2",
         "eslint-plugin-import": "2.18.2",
-        "eslint-plugin-prettier": "^3.1.1",
         "eslint-plugin-jest": "^23.0.4",
         "eslint-plugin-jest-formatting": "^1.2.0",
+        "eslint-plugin-prettier": "^3.1.1",
         "eslint-plugin-sonarjs": "^0.5.0",
         "jest": "^24.9.0",
         "nodemon": "^1.19.4",
