--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -41,19 +41,19 @@
     ]
   },
   "devDependencies": {
-    "@babel/core": "^7.7.2",
-    "@babel/plugin-proposal-class-properties": "^7.7.0",
-    "@babel/plugin-proposal-json-strings": "^7.2.0",
-    "@babel/plugin-proposal-object-rest-spread": "^7.6.2",
-    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
-    "@babel/plugin-syntax-import-meta": "^7.2.0",
-    "@babel/plugin-transform-modules-commonjs": "^7.7.0",
-    "@babel/plugin-transform-runtime": "^7.6.2",
-    "@babel/plugin-transform-spread": "^7.6.2",
-    "@babel/preset-env": "^7.7.1",
-    "@babel/preset-react": "^7.7.0",
-    "@babel/preset-typescript": "^7.7.2",
-    "@babel/runtime-corejs3": "^7.7.2",
+    "@babel/core": "^7.7.4",
+    "@babel/plugin-proposal-class-properties": "^7.7.4",
+    "@babel/plugin-proposal-json-strings": "^7.7.4",
+    "@babel/plugin-proposal-object-rest-spread": "^7.7.4",
+    "@babel/plugin-syntax-dynamic-import": "^7.7.4",
+    "@babel/plugin-syntax-import-meta": "^7.7.4",
+    "@babel/plugin-transform-modules-commonjs": "^7.7.4",
+    "@babel/plugin-transform-runtime": "^7.7.4",
+    "@babel/plugin-transform-spread": "^7.7.4",
+    "@babel/preset-env": "^7.7.4",
+    "@babel/preset-react": "^7.7.4",
+    "@babel/preset-typescript": "^7.7.4",
+    "@babel/runtime-corejs3": "^7.7.4",
     "@bluewind/error-flow": "*",
     "@fortawesome/fontawesome-free": "^5.11.2",
     "@gfx/zopfli": "^1.0.14",
@@ -64,8 +64,8 @@
     "@types/enzyme-adapter-react-16": "^1.0.5",
     "@types/history": "^4.7.3",
     "@types/jest": "^24.0.23",
-    "@types/node": "^12.12.11",
-    "@types/react": "^16.9.11",
+    "@types/node": "^12.12.12",
+    "@types/react": "^16.9.12",
     "@types/react-dom": "^16.9.4",
     "@types/react-redux": "^7.1.5",
     "@types/react-router-dom": "^5.1.2",
@@ -96,7 +96,7 @@
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.15.1",
     "es-check": "^5.1.0",
-    "eslint": "^6.6.0",
+    "eslint": "^6.7.0",
     "eslint-config-prettier": "^6.7.0",
     "eslint-plugin-jest": "^23.0.4",
     "eslint-plugin-jest-formatting": "^1.2.0",
@@ -140,7 +140,7 @@
     "style-loader": "^1.0.0",
     "terser": "^4.4.0",
     "terser-webpack-plugin": "^2.2.1",
-    "ts-jest": "^24.1.0",
+    "ts-jest": "^24.2.0",
     "ts-loader": "^6.2.1",
     "ts-node": "^8.5.2",
     "tslib": "^1.10.0",
@@ -160,7 +160,7 @@
     "with-default-props": "^0.2.1"
   },
   "dependencies": {
-    "@babel/runtime": "^7.7.2",
+    "@babel/runtime": "^7.7.4",
     "@emotion/babel-preset-css-prop": "^10.0.23",
     "@emotion/core": "^10.0.22",
     "@emotion/styled": "^10.0.23",
@@ -170,7 +170,7 @@
     "abort-controller": "^3.0.0",
     "camelcase-keys": "^6.1.1",
     "core-js": "3",
-    "date-fns": "^2.8.0",
+    "date-fns": "^2.8.1",
     "emotion-theming": "^10.0.19",
     "final-form": "^4.18.6",
     "fp-ts": "^2.1.2",
@@ -193,7 +193,6 @@
     "snakecase-keys": "^3.1.0",
     "styled-system": "^5.1.2",
     "tslib": "^1.10.0",
-    "use-debounce": "^3.1.0",
-    "yarn": "^1.19.1"
+    "use-debounce": "^3.1.0"
   }
 }
