--- a/package.json
+++ b/package.json
@@ -20,13 +20,16 @@
     "start:dev": "stmux --mouse -- [ [ \"yarn api:start:dev\" : \"yarn web:start:dev\"  ]  ]",
     "api:start:dev": "cd apps/api && yarn start:dev",
     "web:start:dev": "cd apps/web && yarn start",
-    "typecheck": "lerna run typecheck --parallel --stream"
+    "typecheck": "lerna run typecheck --parallel --stream",
+    "deduplicate": "yarn-deduplicate yarn.lock"
+
   },
   "devDependencies": {
     "husky": "^3.1.0",
     "lerna": "^3.19.0",
     "stmux": "^1.7.1",
-    "rimraf": "^3.0.0"
+    "rimraf": "^3.0.0",
+    "yarn-deduplicate": "^1.1.1"
   },
   "husky": {
     "hooks": {
