--- a/packages/error-flow/.eslintrc.json
+++ b/packages/error-flow/.eslintrc.json
@@ -56,7 +56,8 @@
       ],
       "rules": {
         "@typescript-eslint/no-explicit-any": "off",
-        "@typescript-eslint/no-var-requires": "off"
+        "@typescript-eslint/no-var-requires": "off",
+        "@typescript-eslint/no-empty-function": "off"
       }
     }
   ]
